[tool.poetry]
name = "archive-file-downloader"
version = "0.1.0"
description = "Configurable utility to download and unpack archive files via http"
authors = ["Christian Krenslehner <ckrenslehner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^3.1.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
